2005-09-26 Francois Proulx <francois.proulx@gmail.com>
	* Translated the few new sentences on the login page
	
2005-09-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* login/index.php, stylesheet.css:  Make the create new account bigger, and remove unnecessary words.

2005-09-26 Francois Proulx <francois.proulx@gmail.com>
	* Completed translations
	
2005-09-26 Francois Proulx <francois.proulx@gmail.com>
	* Fixed annoying bug in new google maps code
	
2005-09-25 Francois Proulx <francois.proulx@gmail.com>
	* Complete rewrite of Google maps code, now stands as a js class
	* relooking of mapping stuff
	* wrote basic "Find the closest hotspot" widget for canada geocoding only...
	* fixed broken xml, damn blank lines...

2005-09-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Statistics:  At long last, the monster statistics commit. 
	 We finally have a stable, documented and uniform codebase for statistics. 
	 This resulted is removal of several functions in other classes too.
	 There are a few new reports, but mostly, each report is a lot more flexible.
	 Still TODO:
	 -Security:  This is to be implemented directly in the Statistics class, 
	  by forcing restrictions to the selected nodes and network.
	 -Support selecting multiple users for a report.  
	  The code and SQL queries support it, but the UI doesn't. 
	  An easy and quick way would be to simply parse a coma-separated list.
	 Comment are off course welcome!
	
2005-09-25 Francois Proulx <francois.proulx@gmail.com>
	* Updated initial SQL script to schema 29
	* Remove useless includes in some files, preventing from using the "plugin" contents
	
2005-09-25 Philippe April  <philippe@ilesansfil.org>
	* Make method getCurrentRealNode ORDER BY DESC so it picks
	up the latest network name

2005-09-20 Francois Proulx <francois.proulx@gmail.com>
	* Changed the output layout of the Google Maps hotspots list
	* Added "Loading" message on Google Maps
	
2005-09-17 Francois Proulx <francois.proulx@gmail.com>